...
                    SettingsCellView(label: UserText.settingsVoiceSearch,
                                     accessory: .toggle(isOn: viewModel.voiceSearchEnabledBinding))
                }
                .alert(isPresented: $shouldShowNoMicrophonePermissionAlert) {
                    Alert(title: Text(UserText.noVoicePermissionAlertTitle),
                          message: Text(UserText.noVoicePermissionAlertMessage),
                          dismissButton: .default(Text(UserText.noVoicePermissionAlertOKbutton),
                          action: {
                            viewModel.shouldShowNoMicrophonePermissionAlert = false
                        })
                    )
                }
                .onChange(of: viewModel.shouldShowNoMicrophonePermissionAlert) { value in
...
