...
                VStack(spacing: Constants.textSpacing) {
                    titleText
                    bodyText
                }

                VStack(spacing: Constants.buttonSpacing) {
                    confirmButton
                    viewSettingsButton
                }
                .padding(.top, Constants.buttonTopPadding)
            }
            .padding(.horizontal, Constants.horizontalPadding)
            Spacer()
...
